flux/infrastructure/monitoring/prometheus/grafana-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kube-prometheus-stack-grafana
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - grafana.${GLOBAL_DOMAIN}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: grafana
      port: 80
